# GameEngine

./: .gitignore  INSTALL.md
cmake/: courses.cmake
courses/PA199/: CMakeLists.txt
courses/PA199/project/: CMakeLists.txt  application.cpp  application.hpp  devlog.md  main.cpp  readme.txt  some_game_file.cpp
courses/PA199/project/Engine/: CMakeLists.txt
courses/PA199/project/Engine/AxisAngle/: AxisAngle.cpp  AxisAngle.hpp  CMakeLists.txt
courses/PA199/project/Engine/Matrix4x4/: CMakeLists.txt  Matrix4x4.cpp  Matrix4x4.hpp
courses/PA199/project/Engine/PolarCoords/: CMakeLists.txt  PolarCoords.cpp  PolarCoords.hpp
courses/PA199/project/Engine/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.hpp
courses/PA199/project/Engine/Vector4D/: CMakeLists.txt  Vector4D.cpp  Vector4D.hpp
courses/PA199/project/Engine/Vertex/: CMakeLists.txt  Vertex.hpp
courses/PA199/project/Engine/some_my_library_dir/: CMakeLists.txt
courses/PA199/project/Opengl/: CMakeLists.txt
courses/PA199/project/Opengl/Camera/: CMakeLists.txt  camera.cpp  camera.hpp
courses/PA199/project/Opengl/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp
courses/PA199/project/Opengl/Shape/: CMakeLists.txt  Shape.cpp  Shape.hpp
courses/PA199/project/data/shaders/: sample.frag  sample.vert  texture_fragment_shader.frag  texture_vertex_shader.vert
courses/PA199/project/devlog/: devlog.md
courses/PA199/project/test/: CMakeLists.txt  some_test.cpp
framework/core/: CMakeLists.txt
framework/core/include/: manager.h
framework/core/src/: manager.cpp
